--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div>
-                <h3 class="header">GUEST</h3>
+                <h3 class="header">AWAY</h3>
                 <div class="board">
                     <h2 id="scoreboard-two" class="score">0</h2>
                 </div>
