--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div class="container">
             <div>
-                <h3 class="header">HOME</h3>
+                <h3 class="header">UNICORNS</h3>
                 <div class="board">
                     <h2 id="scoreboard-one" class="score">0</h2>
                 </div>
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div>
-                <h3 class="header">AWAY</h3>
+                <h3 class="header">ALIENS</h3>
                 <div class="board">
                     <h2 id="scoreboard-two" class="score">0</h2>
                 </div>
